Add life seconds
